...
    <string name="firstTimeUser_confirmEnd_confirm">Beenden</string>
    <string name="firstTimeUser_confirmEnd_deny">Abbrechen</string>
    <string name="firstTimeUser_confirmEnd_message">Möchten Sie die Einrichtung der Online‑Ausweisfunktion abbrechen\?
\n
\nSie können die Einrichtung später erneut starten.</string>
    <string name="firstTimeUser_confirmEnd_title">Einrichtung beenden?</string>
    <string name="firstTimeUser_done_close">Einrichtung abschließen</string>
    <string name="firstTimeUser_done_identify">Jetzt ausweisen</string>
    <string name="firstTimeUser_done_title">Sie haben Ihren Online‑Ausweis erfolgreich eingerichtet.</string>
    <string name="firstTimeUser_incorrectTransportPIN_body">Geben Sie Ihre 5‑stellige Transport‑PIN aus dem PIN‑Brief ein.</string>
    <string name="firstTimeUser_incorrectTransportPIN_noAttemptLeft">Sie haben keine Versuche mehr.</string>
    <string name="firstTimeUser_incorrectTransportPIN_textFieldLabel">Eingabefeld Transport-PIN, fünfstellig</string>
    <string name="firstTimeUser_incorrectTransportPIN_title">Inkorrekte Transport-PIN eingegeben.</string>
    <string name="firstTimeUser_intro_body">Sie müssen Ihren Ausweis insgesamt nur einmal einrichten. Falls Sie schon über eine 6‑stellige PIN verfügen, ist Ihr Ausweis bereits eingerichtet.</string>
    <string name="firstTimeUser_intro_box">**Hinweis:** Falls Sie schon über eine persönliche 6‑stellige PIN verfügen, ist Ihr Ausweis bereits eingerichtet.</string>
    <string name="firstTimeUser_intro_startSetup">Jetzt Online-Ausweis einrichten</string>
    <string name="firstTimeUser_intro_startSetupVariation">Jetzt Online-Ausweis freischalten</string>
    <string name="firstTimeUser_intro_title">Haben Sie Ihren Online‑Ausweis bereits eingerichtet\?</string>
    <string name="firstTimeUser_intro_titleVariation">Haben sie Ihren Online-Ausweis bereits freigeschaltet?</string>
    <string name="firstTimeUser_intro_skipSetup">Bereits eingerichtet</string>
    <string name="firstTimeUser_intro_skipSetupVariation">Bereits freigeschaltet</string>
    <string name="firstTimeUser_missingPINLetter_body">Sie brauchen eine neue PIN\? Bestellen Sie einen PIN-Rücksetzbrief:
...
    <string name="firstTimeUser_personalPIN_confirmation">PIN zum Bestätigen wiederholen</string>
    <string name="firstTimeUser_personalPIN_error_mismatch_body">Versuchen Sie es erneut.</string>
    <string name="firstTimeUser_personalPIN_error_mismatch_title">PINs stimmen nicht überein</string>
    <string name="firstTimeUser_personalPIN_textFieldLabel_first">Eingabefeld Persönliche PIN, sechsstellig</string>
    <string name="firstTimeUser_personalPIN_textFieldLabel_second">Eingabefeld Persönliche PIN bestätigen, sechsstellig</string>
    <string name="firstTimeUser_personalPIN_title">Vergeben Sie nun Ihre persönliche Ausweis‑PIN.</string>
    <string name="firstTimeUser_personalPINIntro_continue">Persönliche Ausweis–PIN vergeben</string>
    <string name="firstTimeUser_personalPINIntro_info_body">Sie benötigen diese jedes Mal, wenn Sie die Online‑Ausweisfunktion in Zukunft nutzen.</string>
    <string name="firstTimeUser_personalPINIntro_info_title">Persönliche Ausweis–PIN gut merken</string>
    <string name="firstTimeUser_personalPINIntro_title">Vergeben Sie nun Ihre persönliche Ausweis‑PIN.</string>
    <string name="firstTimeUser_personalPIN_confirmation_body">Nutzen Sie nicht Ihr Geburtsdatum als Ihre PIN. Vergeben Sie eine PIN, die nicht leicht zu erraten ist.</string>
    <string name="firstTimeUser_personalPIN_confirmation_title">Bestätigen Sie Ihre persönliche Ausweis‑PIN.</string>
    <string name="firstTimeUser_pinLetter_body">Den PIN‑Brief haben Sie nach der Beantragung des Ausweises per Post erhalten.</string>
    <string name="firstTimeUser_pinLetter_requestLetter">Nein, PIN-Rücksetzbrief bestellen</string>
    <string name="firstTimeUser_pinLetter_title">Haben Sie Ihren PIN‑Brief noch\?</string>
    <string name="firstTimeUser_pinLetter_letterPresent">Ja, PIN-Brief vorhanden</string>
    <string name="firstTimeUser_scan_body">Probieren Sie verschiedene Stellen aus. Achten Sie darauf, dass Ihr Ausweis das Gerät direkt berührt.</string>
    <string name="firstTimeUser_scan_error_button">Okay</string>
    <string name="firstTimeUser_scan_error_text_feature_unavailable">Diese Funktion wird derzeit nicht unterstützt. Bitte die AusweisApp2 benutzen.</string>
    <string name="firstTimeUser_scan_error_text_unknown">Ein unerwarteter Fehler ist aufgetreten. Bitte in die Logs schauen.</string>
    <string name="firstTimeUser_scan_error_title_id_deactivated">Online-Ausweisfunktion deaktiviert</string>
    <string name="firstTimeUser_scan_error_title_pin_blocked">PIN blockiert</string>
...
